# youtube-to-whisper-gpu

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
